--- a/API/package.json
+++ b/API/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bcrypt": "^0.8.1",
     "ejs": "~0.8.4",
+    "express-jwt": "^1.0.0",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
@@ -20,6 +21,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "jsonwebtoken": "^3.2.2",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "rc": "~0.5.0",
