--- a/Client/GroApp/project.properties
+++ b/Client/GroApp/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=..\\..\\..\\..\\..\\workspace\\android-support-v7-appcompat
-android.library.reference.2=../tess-two
+android.library.reference.1=../../../../../Desktop/Tesseract/tess-two-master/tess-two
+android.library.reference.2=../../../../../workspace/appcompat_v7
