--- a/Client/GroApp/bin/AndroidManifest.xml
+++ b/Client/GroApp/bin/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <activity
             android:name=".PhotoCaptureExample"
             android:label="@string/app_name" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.groteam4450.gro.Login" />
         </activity>
         <activity
             android:name=".Login"
@@ -35,10 +38,16 @@
         <activity
             android:name=".ShoppingList"
             android:label="@string/title_activity_shopping_list" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.groteam4450.gro.PhotoCaptureExample" />
         </activity>
         <activity
             android:name=".Recipe"
             android:label="@string/title_activity_recipe" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.groteam4450.gro.PhotoCaptureExample" />
         </activity>
     </application>
 
