--- a/API/package.json
+++ b/API/package.json
@@ -6,6 +6,8 @@
   "keywords": [],
   "dependencies": {
     "bcrypt": "^0.8.1",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^2.9.8",
     "ejs": "~0.8.4",
     "express-jwt": "^1.0.0",
     "grunt": "0.4.2",
@@ -22,11 +24,17 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "jsonwebtoken": "^3.2.2",
+    "nodemailer": "^1.3.0",
+    "oauth2orize": "^1.0.1",
     "passport": "^0.2.1",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
+    "passport-oauth2-public-client": "^0.1.0",
+    "rand-token": "^0.2.1",
     "rc": "~0.5.0",
     "sails": "~0.10.5",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "^0.10.0-rc5"
   },
   "scripts": {
     "start": "node app.js",
