--- a/Client/GroApp/bin/AndroidManifest.xml
+++ b/Client/GroApp/bin/AndroidManifest.xml
@@ -49,6 +49,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.groteam4450.gro.PhotoCaptureExample" />
         </activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/title_activity_register" >
+        </activity>
     </application>
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
