--- a/Client/GroApp/bin/AndroidManifest.xml
+++ b/Client/GroApp/bin/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="21" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -50,7 +52,7 @@
                 android:value="com.groteam4450.gro.PhotoCaptureExample" />
         </activity>
         <activity
-            android:name=".RegisterActivity"
+            android:name=".Register"
             android:label="@string/title_activity_register" >
         </activity>
     </application>
