--- a/Client/GroApp/project.properties
+++ b/Client/GroApp/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-21
 android.library.reference.1=..\\..\\..\\..\\..\\workspace\\appcompat_v7
-android.library.reference.2=../../../../../Desktop/Tesseract/tess-two-master/tess-two
+android.library.reference.2=../../../../gro/Gro/Client/tess-two
